tests/baselines/reference/gettersAndSettersAccessibility.errors.txt
tests/cases/compiler/gettersAndSettersAccessibility.ts(2,14): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/gettersAndSettersAccessibility.ts(2,14): error TS2379: Getter and setter accessors do not agree in visibility.
tests/cases/compiler/gettersAndSettersAccessibility.ts(3,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/gettersAndSettersAccessibility.ts(3,13): error TS2379: Getter and setter accessors do not agree in visibility.


==== tests/cases/compiler/gettersAndSettersAccessibility.ts (4 errors) ====
    class C99 {
    	private get Baz():number { return 0; }
    	            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    	            ~~~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
    	public set Baz(n:number) {} // error - accessors do not agree in visibility
    	           ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    	           ~~~
!!! error TS2379: Getter and setter accessors do not agree in visibility.
    }
    